# talkoxid

./: Cargo.toml  README.md
assets/: style.toml
config/: cli.yaml  log4rs.yaml
src/: config.rs  core.rs  lib.rs  views.rs
src/chats/: dummy.rs  mod.rs  rocketchat.rs
src/chats/rocketchat/: api.rs  mod.rs  schema.rs
src/notifications/: mod.rs
src/ui/: mod.rs
src/ui/cursive_ui/: mod.rs  views.rs
tests/data/: test_recv_history.json  test_recv_history.txt  test_recv_message.json  test_recv_rooms.json  test_recv_rooms.txt  test_recv_users_in_room.json  test_recv_users_in_room.txt  test_recv_users_in_room_me.json  test_recv_users_in_room_one_not_me.json
utils/: docker-compose.yml  nginx.conf  start.sh
utils/nginx-ssl/: Dockerfile  nginx.conf
