[package]
name = "oxychat"
version = "0.1.0"
authors = ["Dominod <dev@dominod.fr>"]
edition = "2018"

[[bin]]
bench = false
path = "src/bin/main.rs"
name = "oxychat"

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = "0.10"
url = "2.1.0"
sha2 = "0.9.0"
tokio = {version = "0.2", features = ["rt-threaded", "macros"]}
async-trait = "0.1"
futures-util = "0.3"
async-channel = "1.1"
log4rs = "0.12"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["toml", "ncurses-backend"]
