[package]
name = "talkoxid"
version = "0.1.0"
authors = ["Dominod <dev@dominod.fr>"]
edition = "2018"

[[bin]]
bench = false
path = "src/bin/main.rs"
name = "talkoxid"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-tungstenite = { version = "0.8", features = ["tokio-runtime", "async-tls"] }
async-tls = "0.9"
rustls = { version = "0.18", features = ["dangerous_configuration"] }
url = "2.1.0"
webpki-roots = "0.20.0"
webpki = "0.21"
sha2 = "0.9.0"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "time", "blocking"] }
async-trait = "0.1"
futures-util = "0.3"
async-channel = "1.1"
log4rs = "0.12"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "2.33", features = ["yaml"] }
toml = "0.5"
dirs-next = "1.0"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["toml", "ncurses-backend"]
