[package]
name = "talkoxid"
version = "0.1.0"
authors = ["Dominod <dev@dominod.fr>"]
edition = "2018"

[[bin]]
bench = false
path = "src/bin/main.rs"
name = "talkoxid"

[dependencies]
serde_json = { version = "^1.0", default-features=false, features=["std"] }
serde = { version = "^1.0", features = ["derive"], default-features=false }
async-tungstenite = { version = "^0.8", default-features=false, features = ["tokio-runtime", "async-tls"] }
async-tls = { version = "^0.9", default-features=false }
rustls = { version = "^0.18", default-features=false, features = ["dangerous_configuration"] }
url = { version = "^2.1.0", default-features=false }
webpki-roots = { version = "^0.20.0", default-features=false }
webpki = { version = "^0.21", default-features=false }
sha2 = { version = "^0.9.0", default-features=false }
tokio = { version = "^0.2", default-features=false, features = ["rt-threaded", "macros", "blocking"] }
async-trait = { version = "^0.1", default-features=false }
futures-util = { version = "^0.3", default-features=false }
async-channel = { version = "^1.1", default-features=false }
log4rs = { version = "^0.12", default-features=false, features=["console_appender", "file_appender"] }
log = { version = "^0.4", default-features=false }
chrono = { version = "^0.4", default-features=false, features = ["serde"] }
clap = { version = "^2.33", default-features=false, features = ["yaml"] }
toml = { version = "^0.5", default-features=false }
dirs-next = { version = "^1.0", default-features=false }

[target.'cfg(windows)'.dependencies.cursive]
version = "^0.15"
default-features = false
features = ["toml", "crossterm-backend"]


[target.'cfg(unix)'.dependencies.cursive]
version = "^0.15"
default-features = false
features = ["toml", "termion-backend"]
